# Makefile for stout.

nobase_include_HEADERS =			\
  stout/bytes.hpp			\
  stout/cache.hpp			\
  stout/check.hpp			\
  stout/duration.hpp			\
  stout/error.hpp			\
  stout/exit.hpp			\
  stout/fatal.hpp			\
  stout/flags.hpp			\
  stout/flags/flag.hpp			\
  stout/flags/flags.hpp			\
  stout/flags/loader.hpp		\
  stout/flags/parse.hpp			\
  stout/foreach.hpp			\
  stout/format.hpp			\
  stout/fs.hpp				\
  stout/gtest.hpp			\
  stout/gzip.hpp			\
  stout/hashmap.hpp			\
  stout/hashset.hpp			\
  stout/json.hpp			\
  stout/lambda.hpp			\
  stout/multihashmap.hpp		\
  stout/multimap.hpp			\
  stout/net.hpp				\
  stout/none.hpp			\
  stout/nothing.hpp			\
  stout/numify.hpp			\
  stout/option.hpp			\
  stout/os.hpp				\
  stout/owned.hpp			\
  stout/path.hpp			\
  stout/preprocessor.hpp		\
  stout/proc.hpp			\
  stout/protobuf.hpp			\
  stout/result.hpp			\
  stout/stopwatch.hpp			\
  stout/stringify.hpp			\
  stout/strings.hpp			\
  stout/thread.hpp			\
  stout/try.hpp				\
  stout/utils.hpp			\
  stout/uuid.hpp
