load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "atomic-backoff",
    srcs = ["atomic-backoff.cc"],
    deps = [
        "//:atomic-backoff",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "borrowed_ptr",
    srcs = ["borrowed_ptr.cc"],
    deps = [
        "//:borrowed-ptr",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "notification",
    srcs = ["notification.cc"],
    deps = [
        "//:notification",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "stateful-tally",
    srcs = ["stateful-tally.cc"],
    deps = [
        "//:stateful-tally",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "stout",
    srcs = [
        "stringify_tests.cc",
        "temporary_directory_test_tests.cc",
    ],
    deps = [
        "//:stout",
        "@gtest//:gtest_main",
    ],
)
