load("@rules_cc//cc:defs.bzl", "cc_proto_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "test_proto",
    srcs = [":test.proto"],
    visibility = ["//visibility:public"],
    deps = [
        # Well known protos should be included as deps in the
        # proto_library rules of the source files importing them.
        # A list of all @com_google_protobuf well known protos can
        # seen with:
        # `bazel query 'kind(proto_library, @com_google_protobuf//:all)'`
        "@com_google_protobuf//:duration_proto",
        "//include/stout/flags/v1:flag_proto",
    ],
)

cc_proto_library(
    name = "test_proto_library",
    visibility = ["//visibility:public"],
    deps = [":test_proto"],
)

cc_test(
    name = "flags",
    srcs = [
        "duplicate_flag_name.cc",
        "environment_variables.cc",
        "help.cc",
        "missing_flag_name.cc",
        "overload_parsing.cc",
        "parse.cc",
        "positional_arguments.cc",
        "subcommand_flags.cc",
        "validate.cc",
    ],
    deps = [
        ":test_proto_library",
        "//:flags",
        "@gtest//:gtest_main",
    ],
)
