load("@rules_cc//cc:defs.bzl", "cc_test")
load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "test_proto",
    srcs = [
        ":test_default_values.proto",
        ":test_flags.proto",
        ":test_positional_arguments.proto",
        ":test_subcommands.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Well known protos should be included as deps in the
        # proto_library rules of the source files importing them.
        # A list of all @com_google_protobuf well known protos can
        # seen with:
        # `bazel query 'kind(.*, @com_google_protobuf//:all)'`
        "@com_google_protobuf//:duration_proto",
        "//include/stout/flags/v1:flag_proto",
    ],
)

cc_proto_library(
    name = "test_proto_library",
    visibility = ["//visibility:public"],
    deps = [":test_proto"],
)

cc_test(
    name = "flags",
    srcs = [
        "default_values.cc",
        "duplicate_flag_name.cc",
        "environment_variables.cc",
        "help.cc",
        "missing_flag_name.cc",
        "overload_parsing.cc",
        "parse.cc",
        "positional_arguments.cc",
        "subcommand_flags.cc",
        "validate.cc",
    ],
    deps = [
        ":test_proto_library",
        "//:flags",
        "@com_google_protobuf//:time_util",
        "@gtest//:gtest_main",
    ],
)
