load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "flag_proto",
    srcs = [
        ":flag.proto",
        ":positional_argument.proto",
        ":subcommand.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Well known protos should be included as deps in the
        # proto_library rules of the source files importing them.
        # A list of all @com_google_protobuf well known protos can
        # seen with:
        # `bazel query 'kind(.*, @com_google_protobuf//:all)'`
        "@com_google_protobuf//:descriptor_proto",
    ],
)

cc_proto_library(
    name = "flag",
    visibility = ["//visibility:public"],
    deps = [":flag_proto"],
)
